exports[`test renders GridRow correctly 1`] = `
<div
  className="ui basic buttons GridRow  " />
`;

exports[`test renders GridRow correctly 2`] = `
<div
  className="ui basic buttons GridRow GridRow--is-active " />
`;

exports[`test renders GridRow correctly 3`] = `
<div
  className="ui basic buttons GridRow GridRow--is-active " />
`;
